# sb-chatbot

./: .gitignore  LangChainChatClient.py  RAGEvaluator.py  README.md  RagAgent.py  SkyboxPdfHandler.py  SqliteClient.py  StorageClient.py  VectorDatabaseClient.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
pages/: 1_Upload_Pdf.py  1_upload_pdf.py  2_Skybox_Assistant.py  3_OpenAI_Analytics.py  4_PDF_Inventory.py  5_Rag_Evaluation.py
templates/: create_context_prompt.j2
